--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+Properties/PublishProfiles/PubSubCs - Web Deploy.pubxml
+Properties/PublishProfiles/PubSubCs - Web Deploy1.pubxml
